--- a/3.4.1/CHANGELOG
+++ b/3.4.1/CHANGELOG
@@ -1,12 +1,14 @@
 CHANGELOG
+04-11-13
+. 3.4.1 release is nearly a complete rewrite. No longer using 3rd party http client, using native URLLoader class. Simplified event model.
 
-02-21-12
+02-21-13
 . network status is no longer tied to URL ping during subscribe
 . if there is no traffic on the subscribe connection within 
 OPERATION_TIMEOUT seconds, the connection will re-establish
 . more sane defaults
 
-01-29-2012 - 08fdd6698150bcc9a1fb18ebefe0ff7f7929e44e
+01-29-2013 - 08fdd6698150bcc9a1fb18ebefe0ff7f7929e44e
 . added enhanced multiplexed subscribe support
 . better error handling added to example app
 . improved keep-alive handling
